test/types/range/vass/slice-unrep-2.good
slice-unrep-2.chpl:3: error: halt reached - could not represent range slice - it needs to contain negative indices, but the slice index type is unsigned
