test/types/range/vass/slice-unrep-2.chpl
const r1 = ..10:uint;
const r2 = -5..-4;
const r3 = r1(r2);
writeln(r3);
